--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -4,12 +4,25 @@
   margin: 3rem auto 6rem;
 }
 
-.header {
+.header,
+.childrenContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.childrenContainer > article {
+  text-align: center;
+}
+
+.childrenContainer > div {
+  width: stretch;
+  width: -moz-available; /* WebKit-based browsers will ignore this. */
+  width: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+}
+
 .backToHome {
   margin: 3rem 0 0;
+  display: flex;
+  justify-content: space-around;
 }
